# subgroup-aware-ocr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_ACCESS.md  Makefile  README.md  REPRODUCIBILITY.md  RESULTS_OVERVIEW.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_question.md
.github/workflows/: ci.yml
artifacts/public/: README.md
configs/ablation/: baseline.json  full_pipeline.json  pilot_baseline.json  pilot_legacy_baseline.json  pilot_shape_weighted.json  pilot_synth_curriculum.json  shape_weighted.json  synthetic_curriculum.json  synthetic_static.json
configs/decisive/: targeted_synthetic_static_hard_square.json
data/: README.md
data/manifests/: shape_manifest.template.csv  source_class_manifest.template.csv  split_manifest.template.csv  style_manifest.template.csv
data/toy_research/artifacts/: alphabet.json
data/toy_research/manifests/: shape_manifest.csv  style_manifest.csv  synthetic_style_manifest.csv
docs/: evaluation.md  experimental_protocol.md  experiments.md  figures_and_tables.md  project_structure.md  public_release_notes.md  repo_design.md
examples/: README.md
notebooks/: README.md
reports/public/: README.md  baseline_table.csv  claim_audit.md  decisive_hard_bucket_audit.md  decisive_selection_audit.md  decisive_targeted_synth_audit.md  key_numbers.csv  main_config_pairwise_deltas.csv  main_experiment_summary.csv  main_gap_summary.csv  main_study_summary.md  main_subgroup_summary.csv  pilot_experiment_summary.csv  strategic_take_matrix.md
scripts/: run_toy_ablation.sh  run_toy_smoke.sh
src/shape_aware_ocr/: __init__.py  ablation.py  alphabet.py  benchmark.py  dataset.py  evaluation.py  labels.py  metrics.py  model.py  preprocess.py  reporting.py  shape_classifier.py  synthetic.py  training.py
src/shape_aware_ocr/cli/: __init__.py  analyze_shape_predictions.py  audit_experiment_root.py  build_alphabet.py  build_contact_sheet.py  build_error_contact_sheet.py  build_gap_summary.py  build_hard_subset_manifest.py  build_master_run_audit.py  build_private_benchmark.py  build_research_report.py  build_source_class_manifest.py  build_synth_square_pool.py  evaluate.py  filter_error_csv.py  generate_toy_dataset.py  predict_shape_labels.py  reevaluate_experiment_root.py  run_ablation.py  train.py  train_shape_classifier.py
tests/: __init__.py  test_benchmark_and_ablation.py  test_labels.py  test_metrics.py  test_reporting.py  test_toy_dataset.py  test_training_smoke.py
